--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,30 +2,21 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-	integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{/css/ec202006.css}"
-	href="./css/ec202006.css">
+<link rel="stylesheet" th:href="@{/css/ec202006.css}">
 <title>Insert title here</title>
 
 </head>
-<body id="page_entry" class="registration_page">
+<body>
 	<div class="container">
 		<header class="page-header">
-			<p>ロゴ</p>
-			<nav>
-				<ul class="main-nav">
-					<li>category</li>
-					<li>login</li>
-					<li>register</li>
-					<li>cart</li>
-
-				</ul>
-			</nav>
+			登録画面
 		</header>
-		<br>
+		<br> <br>
 
 		<!-- 以下main要素 -->
 		<div id="register-form">
@@ -33,125 +24,139 @@
 				<span>新規会員登録</span>
 			</h2>
 			<br>
-			<form method="post" action="" class="form-horizontal">
+			<form method="post" th:action="@{/register}" class="form-horizontal"
+				th:object="${registerForm}">
 
+				<!-- 名前 -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="userName"> <span
+						class="required">必須</span> <span>お名前</span>
+					</label>
+					<div class="form-group col-md-7">
+						<small class="control-label" th:errors="*{userName}"
+							style="color: red;"> </small> <input type="text" id="userName"
+							name="userName" class="form-control" th:field="*{userName}" />
+					</div>
+				</div>
 
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class="col-form-label">お名前</label>
-					</dt>
-					<dd class="form-group col-xs">
-						<input type="text" id="name" name="name" required="required"
-							class="form-control" size="60" />
-					</dd>
-				</dl>
-
-
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class=" col-form-label">郵便番号</label>
-					</dt>
-					<dd class="form-group col-xs">
+				<!-- 郵便番号 -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="zipcode"> <span
+						class="required">必須</span> <span>郵便番号</span>
+					</label>
+					<div class="form-group col-md-9">
 						<div class="form-group form-inline input_zip">
 							<input type="text" id="zipcode" name="zipcode"
-								required="required" style="ime-mode: disabled;" pattern="\d*"
-								class="form-control" size="60"/>
-							&nbsp;<button>住所検索</button>
+								class="form-control" th:field="*{zipcode}" /> &nbsp;
+							<button type="button"
+								class="btn page-link text-dark d-inline-block"
+								id="get_address_btn">住所検索</button>&nbsp;
+							<small class="control-label" th:errors="*{zipcode}"
+								style="color: red;"></small>
 						</div>
-					</dd>
-				</dl>
+					</div>
+				</div>
 
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class="col-form-label">住所</label>
-					</dt>
-					<dd class="form-group col-xs">
+				<!-- 住所 -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="addr"> <span
+						class="required">必須</span> <span id="addr">住所</span>
+					</label>
 
+					<div class="form-group col-md-7">
 
-						<input type="text" id="address" name="address" required="required"
-							style="ime-mode: active;" placeholder="市区町村名 (例：千代田区神田神保町)"
-							class="form-control" size="60"/>
+						<small class="control-label" th:errors="*{address}"
+							style="color: red;"> </small> <input type="text" name="address"
+							class="form-control" size="60" th:field="*{address}" /> <br>
+					</div>
+				</div>
 
-					</dd>
-				</dl>
+				<!-- 電話番号 -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="zipcode"> <span
+						class="required">必須</span> <span>電話番号</span>
+					</label>
+					<div class="form-group col-md-7">
 
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class="col-form-label">電話番号</label>
-					</dt>
-					<dd class="form-group col-xs">
-						<div class="form-inline form-group input_tel">
-							<input type="tel" id="tel" name="tel" required="required"
-								style="ime-mode: disabled;" class="form-control" size="60"/>
+						<small class="control-label" th:errors="*{tel}"
+							style="color: red;"> </small> <input type="tel" id="tel"
+							name="tel" style="ime-mode: disabled;" class="form-control"
+							size="60" th:field="*{tel}" />
+					</div>
+				</div>
 
-						</div>
-					</dd>
-				</dl>
+				<!-- メールアドレス -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="zipcode"> <span
+						class="required">必須</span> <span>メールアドレス</span>
+					</label>
+					<div class="form-group col-md-7">
 
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class="col-form-label">メールアドレス</label>
-					</dt>
-					<dd class="form-group col-xs">
-						<div class="form-group ">
-							<input type="email" id="entry_email_first"
-								name="entry[email][first]" required="required"
-								class="form-control" size="60"/>
+						<small class="control-label" th:errors="*{email}"
+							style="color: red;"> </small> <input type="text"
+							id="entry_email_first" name="email" class="form-control"
+							size="60" th:field="*{email}" />
+					</div>
+				</div>
 
-						</div>
-					</dd>
-				</dl>
+				<!-- パスワード -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="zipcode"> <span
+						class="required">必須</span> <span>パスワード</span>
+					</label>
+					<div class="form-group col-md-7">
 
-				<dl class="row">
-					<dt class="form-group col-xs">
-						<span class="required">必須</span> <label class="col-form-label">パスワード</label>
-					</dt>
-					<dd class="form-group col-xs">
-						<div class="form-group ">
-							<input type="password" id="entry_password_first"
-								name="entry[password][first]" required="required"
-								placeholder="半角英数字記号8～32文字" class="form-control" size="60"/>
+						<small class="control-label" th:errors="*{password}"
+							style="color: red;"> </small><input type="password" id="password"
+							name="password" placeholder="半角英数字記号8～32文字" class="form-control"
+							size="60" th:field="*{password}" />
+					</div>
+				</div>
 
-						</div>
-					</dd>
-				</dl>
-				<dl class="row">
-					<dt class="form-group">
-						<span class="required form-group col-xs-2">必須</span> <label
-							class="col-form-label col-xs-2">確認用パスワード</label>
-					</dt>
-					<dd class="form-group col-xs-8">
+				<!-- 確認用パスワード -->
+				<div class="form-group row">
+					<label class="col-md-3 col-form-label" for="confirmPassword">
+						<span class="required">必須</span> <span>確認用パスワード</span>
+					</label>
+					<div class="form-group col-md-7">
 
-						<input type="password" id="entry_password_second"
-							name="entry[password][second]" required="required"
-							placeholder="確認のためもう一度入力してください" class="form-control" size="60"/>
+						<small class="control-label" th:errors="*{confirmPassword}"
+							style="color: red;"> </small><input type="password"
+							id="confirmPassword" name="confirmPassword"
+							placeholder="半角英数字記号8～32文字" class="form-control" size="30"
+							th:field="*{confirmPassword}" />
 
-					</dd>
-				</dl>
+					</div>
+				</div>
+				<br>
+
+				<div class="regis-btn">
+					<button type="submit" class="btn btn-light rounded-pill"
+						id="register">登録する</button>
+				</div>
+				<br>
+				<div class="reset-btn">
+					<button type="reset" class="btn btn-light rounded-pill" id="reset">入力内容を削除する</button>
+				</div>
+			</form>
 		</div>
-		
-		<div><button type="submit" class="register" >登録する</button></div><br>
-		<div><button type="reset" class="reset" >入力内容を削除する</button></div>
-
-
-
-
-		
-		</form>
+		<br> <br>
 	</div>
 
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
 		crossorigin="anonymous"></script>
 	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-		integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-		integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-		crossorigin="anonymous"></script>
-
 </body>
+</html>
+
+<script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
+<script th:src="@{/js/get_address.js}"></script>
+</body>
+
 </html>
