--- a/src/main/resources/static/css/ec202006.css
+++ b/src/main/resources/static/css/ec202006.css
@@ -20,6 +20,8 @@ html {
 }
 
 .page-header {
+	display: flex;
+	justify-content: space-between;
 	border-radius: 10px 10px 0px 0px;
 	font-size: 25px;
 	padding: 15px;
@@ -36,7 +38,7 @@ html {
 
 .main-nav li {
 	margin-left: 50px;
-	margin-right: 20px;
+
 }
 
 h2 {
