--- a/src/main/resources/static/css/top.css
+++ b/src/main/resources/static/css/top.css
@@ -2,6 +2,12 @@
 
 a {
 	text-decoration: none;
+	color: black;
+}
+
+a:hover {
+	color: black;
+	text-decoration: none;
 }
 
 li {
@@ -70,8 +76,9 @@ main-nav a {
 
 .item-detail {
 	margin-left: 25px;
-	margin-top: 30px;
-	padding: 30px;
+	margin-top: 50px;
+	padding-left: 10px;
+	padding-right: 25px;
 }
 
 .btn-text {
@@ -88,8 +95,18 @@ main-nav a {
 	background-color: #993333;
 }
 
-.cart-icon{
+.cart-icon {
 	width: 15px;
 	height: 15px;
 	margin-bottom: 5px;
+}
+
+.detail-img {
+	width: 500px;
+	height: 380px;
+}
+
+.itemlist-name {
+	padding-top: 8px;
+	text-align: center;
 }
